components/amq/service-istio-ingress-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: istio-ingress-nodeport
  namespace: istio-ingress
spec:
  ports:
    - name: tcp-amq
      protocol: TCP
      port: 61616
      targetPort: 61616
      nodePort: 31443
  type: NodePort
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
