components/amq/amq-console-configs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: amq-console
spec:
  host: artemis-broker-hdls-svc.amq.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
      sni: artemis-broker-hdls-svc.amq.svc.cluster.local
...
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: amq-console
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
      - amq-console-istio-ingress.apps-crc.testing
    tls:
      mode: SIMPLE
      credentialName: amq-console-cert
...
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: amq-console
  namespace: istio-ingress
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: amq-console
spec:
  gateways:
  - istio-ingress/amq-console
  hosts:
  - amq-console-istio-ingress.apps-crc.testing
  http:
  - route:
    - destination:
        host: artemis-broker-hdls-svc.amq.svc.cluster.local
        port:
          number: 8161
...
