components/amq/amq-nodeport-configs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: amq-nodeport
  namespace: istio-ingress
spec:
  host: artemis-broker-hdls-svc.amq.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
      sni: artemis-broker-hdls-svc.amq.svc.cluster.local
...
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: amq-nodeport
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      name: tcp-amq
      number: 61616
      protocol: TCP
    hosts:
      - amq-nodeport-istio-ingress.apps-crc.testing
    # this won't work, client must negotiate tls with broker
    # tls:
    #   mode: SIMPLE
    #   credentialName: amq-nodeport-cert
...
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: amq-nodeport
  namespace: istio-ingress
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: amq-nodeport
  namespace: istio-ingress
spec:
  gateways:
  - istio-ingress/amq-nodeport
  hosts:
  - amq-nodeport-istio-ingress.apps-crc.testing
  tcp:
    - match:
        - port: 61616
      route:
        - destination:
            host: artemis-broker-hdls-svc.amq.svc.cluster.local
            port:
              number: 61616
...
---
kind: Service
apiVersion: v1
metadata:
  name: amq-nodeport
  namespace: istio-ingress
spec:
  ports:
    - name: tcp-amq
      protocol: TCP
      port: 61616
      targetPort: 61616
      nodePort: 31443
  type: NodePort
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
...
