components/amq/virtualservice-amq.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: amq
  namespace: istio-ingress
spec:
  gateways:
    - istio-ingress/amq
  hosts:
    - istio-ingress-nodeport.istio-ingress.svc.cluster.local
  tcp:
    - match:
        - port: 61616
      route:
        - destination:
            host: artemis-broker-hdls-svc.amq.svc.cluster.local
            port:
              number: 61616
